--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,9 @@
       package="com.example.AsyncWeather"
       android:versionCode="1"
       android:versionName="1.0">
-
-
+      
+    <uses-permission android:name="android.permission.INTERNET" />
+      
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
